--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "new-md",
   "version": "0.0.0",
   "scripts": {
@@ -7,7 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.25.0",
+    "cheerio": "^1.0.0-rc.10",
+    "iconv-lite": "^0.6.3",
     "js-cookie": "^3.0.1",
+    "node-fetch": "^3.2.0",
     "vue": "^3.2.25",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.2"
