--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "new-md",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview"
   },
