fix icon IOS suppored

--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "name": "new-md",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite --host",
+    "dev": "vite",
+    "host": "vite --host",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --host"
   },
   "dependencies": {
     "axios": "^0.25.0",
